pkg/lang/testdata/ub/config/invalid/input-call-in-map.ub
factory: {
  inputs: { x: { a: pick() } }
}
